12920: Upgraded TypeScript to version 2.7.x

--- a/packages/uxpin-code-cli/tsconfig.json
+++ b/packages/uxpin-code-cli/tsconfig.json
@@ -9,6 +9,7 @@
     "skipLibCheck": true,
     "baseUrl": "./",
     "jsx": "react",
+    "pretty": true,
     "paths": {
       "*": [
         "node_modules/*",
