--- a/packages/uxpin-merge-cli/package.json
+++ b/packages/uxpin-merge-cli/package.json
@@ -100,8 +100,8 @@
     "p-map-series": "^1.0.0",
     "p-reduce": "^1.0.0",
     "path-sort": "^0.1.0",
-    "react-docgen": "^3.0.0-beta9",
-    "react-docgen-typescript": "^1.0.2",
+    "react-docgen": "^3.0.0-rc.1",
+    "react-docgen-typescript": "^1.11.0",
     "request-promise": "^4.2.2",
     "require1k": "^1.0.1",
     "sortobject": "^1.1.1",
