--- a/packages/uxpin-merge-cli/package.json
+++ b/packages/uxpin-merge-cli/package.json
@@ -108,6 +108,7 @@
     "source-map-support": "^0.4.18",
     "tslib": "^1.9.0",
     "typescript": "^3.1.3",
+    "typescript-json-schema": "^0.33.0",
     "uuid": "^3.3.2",
     "webpack": "^4.8.1",
     "webpack-merge": "^4.1.2"
