--- a/docker/Dockerfile.tests
+++ b/docker/Dockerfile.tests
@@ -9,7 +9,7 @@ ENV CHROME_PATH /usr/bin/google-chrome
 SHELL ["/bin/bash", "-l", "-c"]
 
 # install: node.js@8.3 & yarn
-RUN curl -o nodejs.deb https://deb.nodesource.com/node_8.x/pool/main/n/nodejs/nodejs_8.3.0-1nodesource1~xenial1_amd64.deb && \
+RUN curl -o nodejs.deb https://deb.nodesource.com/node_8.x/pool/main/n/nodejs/nodejs_8.11.0-1nodesource1_amd64.deb && \
     dpkg -i ./nodejs.deb && \
     rm nodejs.deb && \
     rm -rf /var/lib/apt/lists/*
