--- a/packages/uxpin-merge-cli/package.json
+++ b/packages/uxpin-merge-cli/package.json
@@ -113,6 +113,7 @@
     "p-reduce": "^1.0.0",
     "path-sort": "^0.1.0",
     "react-docgen": "^3.0.0-beta9",
+    "react-docgen-imported-proptype-handler": "^1.0.4",
     "react-docgen-typescript": "^1.0.2",
     "request-promise": "^4.2.2",
     "require1k": "^1.0.1",
