Update package name to `@uxpin/merge-cli`

--- a/packages/uxpin-code-cli/package.json
+++ b/packages/uxpin-code-cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@uxpin/code-cli",
+  "name": "@uxpin/merge-cli",
   "version": "0.0.21",
   "description": "Command-line tool integrating Design System repository with http://code.uxpin.com",
   "main": "src/index.js",
